# AccessControlSystem

./: .gitignore  CMakeLists.txt  README.md  card_man.c  card_man.h  display.c  display.h  door_man.c  door_man.h  main.c  records_op.c  records_op.h  resident_man.c  resident_man.h  utils.c  utils.h
